<resources>
    <string name="app_name">AndroQuiz</string>
    <string name="username_text">Kullanıcı adı</string>
    <string name="password_text">Parola</string>
    <string name="login_button_text">Giriş</string>
    <string name="welcome_text">AndroQuiz\'e Hoş Geldiniz!</string>
    <string name="username_hint_text"><font size="12">Sadece harf kullanın.</font></string>
    <string name="title_activity_answers">AnswersActivity</string>
    <string name="title_activity_questions">QuestionsActivity</string>
    <string name="username"><font size="16">Kullanıcı: %1$s</font></string>
    <string name="question_number">Soru %1$d</string>
    <string name="question_text">%1$s</string>
    <string name="continue_button_text">Devam</string>
    <string name="optionA_radio">A) %1$s</string>
    <string name="optionB_radio">B) %1$s</string>
    <string name="optionC_radio">C) %1$s</string>
    <string name="optionD_radio">D) %1$s</string>
    <string name="submit_button_text">Gönder</string>
    <string name="user_answers_title">Cevaplar</string>
    <string name="answer_one_retrieved">1) %1$s (%2$s)</string>
    <string name="answer_two_retrieved">2) %1$s (%2$s)</string>
    <string name="answer_three_retrieved">3) %1$s (%2$s)</string>
    <string name="answer_four_retrieved">4) %1$s (%2$s)</string>
    <string name="answer_five_retrieved">5) %1$s (%2$s)</string>

    <string-array name="questions">
        <item>Hangi Android versiyonu telefonda çalışmıyor?</item>
        <item>Hangi şirket ilk Android akıllı saatini yaptı?</item>
        <item>Hangi şirket ilk Android telefonu yaptı?</item>
        <item>Google Duo nedir?</item>
        <item>Android Inc. kaç yılınca kuruldu?</item>
    </string-array>
    <string-array name="optionA">
        <item>1.0</item>
        <item>T-Mobile</item>
        <item>Sony</item>
        <item>Görüntülü görüşme uygulaması</item>
        <item>2001</item>
    </string-array>
    <string-array name="optionB">
        <item>2.0</item>
        <item>HTC</item>
        <item>T-Mobile</item>
        <item>Sesli mesajlaşma uygulaması</item>
        <item>2002</item>
    </string-array>
    <string-array name="optionC">
        <item>3.0</item>
        <item>LG</item>
        <item>HTC</item>
        <item>Sanal gerçeklik uygulaması</item>
        <item>2003</item>
    </string-array>
    <string-array name="optionD">
        <item>4.0</item>
        <item>Sony</item>
        <item>Samsung</item>
        <item>Akıllı asistan uygulaması</item>
        <item>2004</item>
    </string-array>


</resources>
