<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/questionFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    android:orientation="vertical"
    tools:context="com.androidedu.kodluyoruzakademi.androquiz.QuestionFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/question_number" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/question_text" />

    <RadioButton
        android:id="@+id/optionA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/optionA_radio" />

    <RadioButton
        android:id="@+id/optionB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/optionB_radio" />

    <RadioButton
        android:id="@+id/optionC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/optionC_radio" />

    <RadioButton
        android:id="@+id/optionD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/optionD_radio" />

</LinearLayout>
